--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,7 @@ auto: true
 server: true
 pygments: true
 permalink: none
-baseurl: /jsfanyi 
-oauth_client_id: c602a8bd54b1e774f864
-gatekeeper_url: http://prose-gatekeeper.herokuapp.com
+baseurl: "" 
 exclude:
 - .gitignore
 - README.md
