--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ auto: true
 server: true
 pygments: true
 permalink: none
-baseurl: /jsfanyi/ 
+baseurl: jsfanyi/ 
 exclude:
 - .gitignore
 - README.md
